# kinect

./: CMakeLists.txt  README
include/kinect/: Context.h  Skeleton.h
lib/: kinect.lua
lib/kinect/: Context.lua
sub/: Context_core.cpp  Skeleton_core.cpp
test/: Context_test.lua
